--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 
 <!-- AICW Tracking Snippet -->
 <script
-  src="https://aichatwatch.com/assets/js/aicw-view.min.js"
+  src="https://aichatwatch.com/assets/js/aicw-view.js"
   data-key="aa9237f1-44d8-4543-b320-663e871262a8"
   defer
 ></script>
