--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@ description: "Free open-source tool to check if AI can find your website, then t
             <p>Track mentions, analyze trends, and understand how different AI models position your brand vs. competitors</p>
         </div>
 
-        <div class="features-grid">
-
-            <div class="feature-card">
+        <ul class="features-grid">
+            <li class="feature-card">
                 <div class="feature-screenshot">
                     <img src="{{ '/assets/images/screenshots/aicw-report-screenshot-top-influencers.png' | relative_url }}" alt="See top influencers" loading="lazy" />
                 </div>
@@ -121,9 +120,9 @@ description: "Free open-source tool to check if AI can find your website, then t
                     <h3>🤖 See Top Influencers</h3>
                     <p>See who is mentioned by AI the most. Filter by AI, by trend, mentions, order of appearance, influence.</p>
                 </div>
-            </div>
+            </li>
 
-            <div class="feature-card">
+            <li class="feature-card">
                 <div class="feature-screenshot">
                     <img src="{{ '/assets/images/screenshots/aicw-report-screenshot-filter-by-ai.png' | relative_url }}" alt="Filter reports by AI model" loading="lazy" />
                 </div>
@@ -131,9 +130,9 @@ description: "Free open-source tool to check if AI can find your website, then t
                     <h3>🤖 Filter by AI Model</h3>
                     <p>Compare how different AI models respond to your queries. Filter by AI, by trend, mentions, order of appearance, influence.</p>
                 </div>
-            </div>
+            </li>
 
-            <div class="feature-card">
+            <li class="feature-card">
                 <div class="feature-screenshot">
                     <img src="{{ '/assets/images/screenshots/aicw-report-screenshot-filter-by-trend.png' | relative_url }}" alt="Filter by trending mentions" loading="lazy" />
                 </div>
@@ -141,9 +140,9 @@ description: "Free open-source tool to check if AI can find your website, then t
                     <h3>📈 Track Trends</h3>
                     <p>Identify rising and falling trends over time. Filter by trend to discover which links, products, organizations and topics are gaining or losing traction across AI models.</p>
                 </div>
-            </div>
+            </li>
 
-            <div class="feature-card">
+            <li class="feature-card">
                 <div class="feature-screenshot">
                     <img src="{{ '/assets/images/screenshots/aicw-report-screenshot-view-table.png' | relative_url }}" alt="View detailed table data" loading="lazy" />
                 </div>
@@ -151,9 +150,9 @@ description: "Free open-source tool to check if AI can find your website, then t
                     <h3>📊 Table View</h3>
                     <p>Dive deep into the data with table analyze mentions, trends, order of appearance, share of voice and relationships between items. Sort, filter, and export to CSV.</p>
                 </div>
-            </div>
+            </li>
 
-            <div class="feature-card">
+            <li class="feature-card">
                 <div class="feature-screenshot">
                     <img src="{{ '/assets/images/screenshots/aicw-report-screenshot-filter-by-ai-graph.png' | relative_url }}" alt="View items as graphs" loading="lazy" />
                 </div>
@@ -161,8 +160,8 @@ description: "Free open-source tool to check if AI can find your website, then t
                     <h3>📊 Graph View</h3>
                     <p>Dive deep into the data with table analyze mentions, trends, order of appearance, share of voice and relationships between items. Sort, filter, and export to CSV.</p>
                 </div>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 </section>
 
@@ -268,33 +267,26 @@ description: "Free open-source tool to check if AI can find your website, then t
 
 <!-- Visual Workflow Section -->
 <section class="workflow-section">
-    <div class="container" style="text-align: center;">
-        <h2 style="text-align: center;">How It Works</h2>
-        <div class="workflow-steps">
-            <div class="workflow-step">
-                <div class="workflow-step-number">1</div>
+    <div class="container">
+        <h2>How It Works</h2>
+        <ol class="workflow-steps">
+            <li class="workflow-step">
                 <h3>Write Questions</h3>
                 <p>Use templates or create your own</p>
-                <span class="workflow-arrow">→</span>
-            </div>
-            <div class="workflow-step">
-                <div class="workflow-step-number">2</div>
+            </li>
+            <li class="workflow-step">
                 <h3>Query AI Models</h3>
                 <p>Up to 20 AI models respond (ChatGPT, Claude, Perplexity, Gemini, etc.)</p>
-                <span class="workflow-arrow">→</span>
-            </div>
-            <div class="workflow-step">
-                <div class="workflow-step-number">3</div>
+            </li>
+            <li class="workflow-step">
                 <h3>Analyze Data</h3>
                 <p>Extract insights, trends, mentions, influence, etc.</p>
-                <span class="workflow-arrow">→</span>
-            </div>
-            <div class="workflow-step">
-                <div class="workflow-step-number">4</div>
+            </li>
+            <li class="workflow-step">
                 <h3>Get Reports</h3>
                 <p>Visual interactive reports with CSV export</p>
-            </div>
-        </div>
+            </li>
+        </ol>
     </div>
 </section>
 
@@ -305,27 +297,27 @@ description: "Free open-source tool to check if AI can find your website, then t
             <h2>Frequently Asked Questions</h2>
         </div>
 
-        <div class="faq-grid">
+        <dl class="faq-list">
             <div class="faq-item">
-                <h3>Who needs this tool?</h3>
-                <p>Marketers mostly, so they can look which competitors are mentioned by AI, in which order, what are the resources and websites mentioned by AI, etc.</p>
+                <dt>Who needs this tool?</dt>
+                <dd>Marketers mostly, so they can look which competitors are mentioned by AI, in which order, what are the resources and websites mentioned by AI, etc.</dd>
             </div>
 
             <div class="faq-item">
-                <h3>How much does it cost?</h3>
-                <p>The tool is free and open-source. You only need to pay for using AI models via selected provider (like OpenAI, Claude or OpenRouter).</p>
+                <dt>How much does it cost?</dt>
+                <dd>The tool is free and open-source. You only need to pay for using AI models via selected provider (like OpenAI, Claude or OpenRouter).</dd>
             </div>
 
             <div class="faq-item">
-                <h3>How secure is it?</h3>
-                <p>It runs on your computer. AICW sends questions to selected AI models via selected AI model provider - check Terms of Use and Privacy Policy of these providers for more information.</p>
+                <dt>How secure is it?</dt>
+                <dd>It runs on your computer. AICW sends questions to selected AI models via selected AI model provider - check Terms of Use and Privacy Policy of these providers for more information.</dd>
             </div>
 
             <div class="faq-item">
-                <h3>I want to add a feature or report an issue?</h3>
-                <p>AICW tool is open-source, check the source code at <a href="https://github.com/aichatwatch/aicw" target="_blank">GitHub</a> and add a feature or report an issue.</p>
+                <dt>I want to add a feature or report an issue?</dt>
+                <dd>AICW tool is open-source, check the source code at <a href="https://github.com/aichatwatch/aicw" target="_blank" rel="noopener">GitHub</a> and add a feature or report an issue.</dd>
             </div>
-        </div>
+        </dl>
     </div>
 </section>
 
