--- a/demo/reports/projects/AI Tools for Marketers/2025-10-17/2-what-tools-resources-or--e0cf8838/index.html
+++ b/demo/reports/projects/AI Tools for Marketers/2025-10-17/2-what-tools-resources-or--e0cf8838/index.html
@@ -2966,7 +2966,7 @@
 
 <!--AICW-->
 <script
-  src="https://aichatwatch.com/assets/js/aicw-view.js"
+  src="https://cdn.aichatwatch.com/aicw-view.js"
   data-key="aa9237f1-44d8-4543-b320-663e871262a8"
   defer
 ></script>
