--- a/demo/reports/projects/Open-source projects/index.html
+++ b/demo/reports/projects/Open-source projects/index.html
@@ -139,7 +139,7 @@
   </script>
 <!--AICW-->
 <script
-  src="https://aichatwatch.com/assets/js/aicw-view.js"
+  src="https://cdn.aichatwatch.com/aicw-view.js"
   data-key="aa9237f1-44d8-4543-b320-663e871262a8"
   defer
 ></script>
